k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api-service
  namespace: users-api
spec:
  type: ClusterIP
  selector:
    app: users-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
